# fastapi-social-network

./: README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 06b673d28796_first_migration.py  f8dbc4b9b9a1_migration.py
app/: config.py  database.py  main.py  models.py  oauth2.py  playground.py  schemas.py
app/routers/: auth.py  post.py  user.py  vote.py
app/tests/: generic.py  test_posts.py  test_users.py
