[tool.poetry]
name = "fcc"
version = "0.1.0"
description = ""
authors = ["Rafael Sanabria <rafael.d.sanabria@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.12"
fastapi = {extras = ["all"], version = "^0.70.0"}
uvicorn = "^0.15.0"
psycopg2 = "^2.9.1"
sqlmodel = "^0.0.4"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
requests = "^2.26.0"
pytest = "^6.2.5"
alembic = "^1.7.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
